--- a/themes/gorillawebtoolkit/layouts/partials/header.html
+++ b/themes/gorillawebtoolkit/layouts/partials/header.html
@@ -10,10 +10,10 @@
 	  </li>
 	  -->
 			<li>
-				<a href="https://github.com/gorilla/" title="repository and issue tracker">Source (GitHub)</a>
+				<a href="https://github.com/gorilla/" target="_blank" title="repository and issue tracker">Source</a>
 			</li>
 			<li>
-				<a href="https://groups.google.com/group/gorilla-web" title="mailing list">Community</a>
+				<a href="https://groups.google.com/group/gorilla-web" target="_blank" title="mailing list">Community</a>
 			</li>
 			<!--
 
