--- a/themes/gorillawebtoolkit/static/css/screen.css
+++ b/themes/gorillawebtoolkit/static/css/screen.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Paytone+One|PT+Sans:400,700,400italic);
+@import url(https://fonts.googleapis.com/css?family=Paytone+One|PT+Sans:400,700,400italic);
 
 body {
 	background: #1a1a1a;
